--- a/css/index.css
+++ b/css/index.css
@@ -58,7 +58,7 @@ input[type=number] {
   }
 body{
     user-select: none;
-    height: auto;
+    height: 100vh;
     overflow-x: hidden;
     width: 100%;
     background: #171717;
